--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,10 @@
                <ul class="projects__list list">
                   <li class="projects__item">
                      <a href="" class="link">
-                        <img src="./images/portfolio/banking-app-interface-concept.jpg" alt="banking app interface" class="projects__item-img" width="360" height="300" />
+                        <div class="projects__item-wrapper">
+                           <img src="./images/portfolio/banking-app-interface-concept.jpg" alt="banking app interface" class="projects__item-img" width="360" height="300" />
+                           <p class="project__item-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="project__item-content">
                            <h2 class="projects__item-title">Banking App Interface Concept</h2>
                            <p class="projects__item-desc">App</p>
@@ -55,7 +58,10 @@
                   </li>
                   <li class="projects__item">
                      <a href="" class="link">
-                        <img src="./images/portfolio/cashless-payment.jpg" alt="using a smartphone to pay" class="projects__item-img" width="360" height="300" />
+                        <div class="projects__item-wrapper">
+                           <img src="./images/portfolio/cashless-payment.jpg" alt="using a smartphone to pay" class="projects__item-img" width="360" height="300" />
+                           <p class="project__item-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="project__item-content">
                            <h2 class="projects__item-title">Cashless Payment</h2>
                            <p class="projects__item-desc">Marketing</p>
@@ -64,7 +70,10 @@
                   </li>
                   <li class="projects__item">
                      <a href="" class="link">
-                        <img src="./images/portfolio/meditaion-app.jpg" alt="meditation app" class="projects__item-img" width="360" height="300" />
+                        <div class="projects__item-wrapper">
+                           <img src="./images/portfolio/meditaion-app.jpg" alt="meditation app" class="projects__item-img" width="360" height="300" />
+                           <p class="project__item-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="project__item-content">
                            <h2 class="projects__item-title">Meditation App</h2>
                            <p class="projects__item-desc">App</p>
@@ -73,7 +82,10 @@
                   </li>
                   <li class="projects__item">
                      <a href="" class="link">
-                        <img src="./images/portfolio/taxi-service.jpg" alt="taxi service" class="projects__item-img" width="360" height="300" />
+                        <div class="projects__item-wrapper">
+                           <img src="./images/portfolio/taxi-service.jpg" alt="taxi service" class="projects__item-img" width="360" height="300" />
+                           <p class="project__item-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="project__item-content">
                            <h2 class="projects__item-title">Taxi Service</h2>
                            <p class="projects__item-desc">Marketing</p>
@@ -82,7 +94,10 @@
                   </li>
                   <li class="projects__item">
                      <a href="" class="link">
-                        <img src="./images/portfolio/screen-illustrations.jpg" alt="phone theme illustration" class="projects__item-img" width="360" height="300" />
+                        <div class="projects__item-wrapper">
+                           <img src="./images/portfolio/screen-illustrations.jpg" alt="phone theme illustration" class="projects__item-img" width="360" height="300" />
+                           <p class="project__item-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="project__item-content">
                            <h2 class="projects__item-title">Screen Illustrations</h2>
                            <p class="projects__item-desc">Design</p>
@@ -91,7 +106,10 @@
                   </li>
                   <li class="projects__item">
                      <a href="" class="link">
-                        <img src="./images/portfolio/online-courses.jpg" alt="girl speaking by video chat" class="projects__item-img" width="360" height="300" />
+                        <div class="projects__item-wrapper">
+                           <img src="./images/portfolio/online-courses.jpg" alt="girl speaking by video chat" class="projects__item-img" width="360" height="300" />
+                           <p class="project__item-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="project__item-content">
                            <h2 class="projects__item-title">Online Courses</h2>
                            <p class="projects__item-desc">Marketing</p>
@@ -100,7 +118,10 @@
                   </li>
                   <li class="projects__item">
                      <a href="" class="link">
-                        <img src="./images/portfolio/instagram-stories-concept.jpg" alt="concept of instagram stories" class="projects__item-img" width="360" height="300" />
+                        <div class="projects__item-wrapper">
+                           <img src="./images/portfolio/instagram-stories-concept.jpg" alt="concept of instagram stories" class="projects__item-img" width="360" height="300" />
+                           <p class="project__item-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="project__item-content">
                            <h2 class="projects__item-title">Instagram Stories Concept</h2>
                            <p class="projects__item-desc">Design</p>
@@ -109,7 +130,10 @@
                   </li>
                   <li class="projects__item">
                      <a href="" class="link">
-                        <img src="./images/portfolio/organic-food.jpg" alt="girl carry organic food" class="projects__item-img" width="360" height="300" />
+                        <div class="projects__item-wrapper">
+                           <img src="./images/portfolio/organic-food.jpg" alt="girl carry organic food" class="projects__item-img" width="360" height="300" />
+                           <p class="project__item-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="project__item-content">
                            <h2 class="projects__item-title">Organic Food</h2>
                            <p class="projects__item-desc">Web Site</p>
@@ -118,7 +142,10 @@
                   </li>
                   <li class="projects__item">
                      <a href="" class="link">
-                        <img src="./images/portfolio/fresh-coffee.jpg" alt="latte art example" class="projects__item-img" width="360" height="300" />
+                        <div class="projects__item-wrapper">
+                           <img src="./images/portfolio/fresh-coffee.jpg" alt="latte art example" class="projects__item-img" width="360" height="300" />
+                           <p class="project__item-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="project__item-content">
                            <h2 class="projects__item-title">Fresh Coffee</h2>
                            <p class="projects__item-desc">Web Site</p>
