fixed issues with trantision

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="header__nav">
                <a href="./index.html" class="header__logo link">Web<span>Studio</span></a>
                <ul class="header__menu-list list">
-                  <li class="header__menu-item"><a href="./index.html" class="header__menu-link link">Studio</a></li>
+                  <li class="header__menu-item active"><a href="./index.html" class="header__menu-link link">Studio</a></li>
                   <li class="header__menu-item"><a href="./portfolio.html" class="header__menu-link link">Portfolio</a></li>
                   <li class="header__menu-item"><a href="" class="header__menu-link link">Contacts</a></li>
                </ul>
@@ -341,7 +341,7 @@
       <div class="backdrop is-hidden" data-modal>
          <div class="modal">
             <button type="button" class="modal-close" data-modal-close><img src="./images/modal-close.svg" alt="" /></button>
-         </div> 
+         </div>
       </div>
       <script src="./js/modal.js"></script>
    </body>
