--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                <a href="./index.html" class="header__logo link">Web<span>Studio</span></a>
                <ul class="header__menu-list list">
                   <li class="header__menu-item"><a href="./index.html" class="header__menu-link link">Studio</a></li>
-                  <li class="header__menu-item"><a href="./portfolio.html" class="header__menu-link link">Portfolio</a></li>
+                  <li class="header__menu-item active"><a href="./portfolio.html" class="header__menu-link link">Portfolio</a></li>
                   <li class="header__menu-item"><a href="" class="header__menu-link link">Contacts</a></li>
                </ul>
             </nav>
